--- a/index.html
+++ b/index.html
@@ -3,21 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Min Webbplats</title>
+  <title>Startsida</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!-- Header -->
   <header>
+    <div class="logo">
+      <img src="images/logo.png" alt="Logo" />
+    </div>
     <nav>
       <ul>
         <li><a href="index.html">Hem</a></li>
+        <li><a href="om.html">Om oss</a></li>
+        <li><a href="tjanster.html">Tjänster</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
+    <button class="contact-btn">Kontakta oss</button>
   </header>
-  <main>
-    <h1>Välkommen till min webbplats!</h1>
-  </main>
-  <script src="js/script.js"></script>
+
+  <!-- Första container -->
+  <section class="hero-container" style="background-image: url('images/background.jpg');">
+    <div class="hero-content">
+      <h1>Välkommen till Vår Webbplats</h1>
+      <p>Vi erbjuder de bästa lösningarna för dig.</p>
+      <button class="hero-btn">Läs mer</button>
+    </div>
+  </section>
+
+  <!-- Andra container -->
+  <section class="cards-container">
+    <div class="card">
+      <img src="images/card1.jpg" alt="Card 1">
+      <h2>Card Titel 1</h2>
+      <p>Beskrivning av kort 1. Det här är en kort text som förklarar kortets innehåll.</p>
+    </div>
+    <div class="card">
+      <img src="images/card2.jpg" alt="Card 2">
+      <h2>Card Titel 2</h2>
+      <p>Beskrivning av kort 2. Det här är en kort text som förklarar kortets innehåll.</p>
+    </div>
+    <div class="card">
+      <img src="images/card3.jpg" alt="Card 3">
+      <h2>Card Titel 3</h2>
+      <p>Beskrivning av kort 3. Det här är en kort text som förklarar kortets innehåll.</p>
+    </div>
+  </section>
+
 </body>
 </html>
