--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Startsida</title>
+  <title>Prime Systems</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,7 +12,10 @@
   <header>
     <div class="logo">
       <img src="images/logo.png" alt="Logo" />
+      <h1>Prime Systems</h1>
     </div>
+    <div style="width: 60%;">
+      <button class="contact-btn">Kontakta oss</button>
     <nav>
       <ul>
         <li><a href="index.html">Hem</a></li>
@@ -21,7 +24,9 @@
         <li><a href="kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
-    <button class="contact-btn">Kontakta oss</button>
+
+    </div>
+    
   </header>
 
   <!-- Första container -->
@@ -35,6 +40,10 @@
 
   <!-- Andra container -->
   <section class="cards-container">
+    <div>
+      <h2>Våra Tjänster</h2>
+      <p>Upptäck våra tjänster som är anpassade för att ge verkligt värde.</p>
+    </div>
     <div class="card">
       <img src="images/card1.jpg" alt="Card 1">
       <h2>Card Titel 1</h2>
