--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero-container" style="background-image: url('images/background.jpg');">
+  <section class="hero-container">
     <div class="hero-content">
       <h1>Välkommen till Vår Webbplats</h1>
       <p>Vi erbjuder de bästa lösningarna för dig.</p>
