--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-        <button class="contact-btn">Kontakta oss</button>
+        <button class="prem-btn">Kontakta oss</button>
       </div>
     </div>
   </header>
@@ -34,34 +34,86 @@
   <!-- Hero Section -->
   <section class="hero-container">
     <div class="hero-content">
-      <h1>Välkommen till Vår Webbplats</h1>
-      <p>Vi erbjuder de bästa lösningarna för dig.</p>
-      <button class="hero-btn">Läs mer</button>
+      <h1>Uppgradera ditt företags teknologi idag!</h1>
+      <p>Kontakta oss för att maximera din verksamhet med skräddarsydda och högkvalitativa lösningar!</p>
+      <div>
+        <button class="prem-btn">Kontakta oss</button>
+        <button class="second-btn">Våra tjänster</button>
+      </div>
     </div>
   </section>
 
   <!-- Services Section -->
-  <section class="cards-container">
+  <section class="services">
     <div class="section-intro">
-      <h2>Våra Tjänster</h2>
+      <h1>Våra Tjänster</h1>
       <p>Upptäck våra tjänster som är anpassade för att ge verkligt värde.</p>
     </div>
-    <div class="card">
-      <img src="images/card1.jpg" alt="Card 1">
-      <h2>Card Titel 1</h2>
-      <p>Beskrivning av kort 1. Det här är en kort text som förklarar kortets innehåll.</p>
-    </div>
-    <div class="card">
-      <img src="images/card2.jpg" alt="Card 2">
-      <h2>Card Titel 2</h2>
-      <p>Beskrivning av kort 2. Det här är en kort text som förklarar kortets innehåll.</p>
-    </div>
-    <div class="card">
-      <img src="images/card3.jpg" alt="Card 3">
-      <h2>Card Titel 3</h2>
-      <p>Beskrivning av kort 3. Det här är en kort text som förklarar kortets innehåll.</p>
+    <div class="card-grid">
+      <div class="card">
+        <img src="images/design.jpg" alt="Card 1">
+        <h2>Design</h2>
+        <p>Vi utvecklar designlösningar som är anpassade efter dina och dina kunders behov och önskemål.</p>
+        <button class="read-btn">Läs mer >></button>
+      </div>
+      <div class="card">
+        <img src="images/web.jpg" alt="Card 2">
+        <h2>Webbutveckling</h2>
+        <p>Optimera din verksamhet med en hemsida, e-butik eller e-tjänster anpassade efter dina affärsmål.</p>
+        <button class="read-btn">Läs mer >></button>
+      </div>
+      <div class="card">
+        <img src="images/mobile.jpg" alt="Card 3">
+        <h2>Mobilappar</h2>
+        <p>Ta nästa steg mot professionalism och bygg starkare relationer med dina kunder genom mobilapplikationer.</p>
+        <button class="read-btn">Läs mer >></button>
+      </div>
     </div>
   </section>
+
+  <section class="omoss-section">
+    <!-- Content Div -->
+    <div class="om-oss">
+      <h1>Innovation och kvalitet i fokus</h1>
+      <p>Prime Systems drivs av en passion för innovation och engagemang för toppresultat. Vi sätter en ny standard för kvalitet, där varje kodrad och designdetalj är utformad för att överträffa förväntningar.</br> Med skräddarsydda lösningar skapar vi värde genom nära samarbete med kunder. Genom att kombinera teknisk expertis med kreativt tänkande säkerställer vi att vårt arbete alltid är i framkant.</p>
+    </div>
+
+    <div class="content-image-section">
+      <div class="content">
+        <ul class="features-list">
+          <li>
+            <img src="images/rocket.png" alt="Feature 1">
+            <div>
+              <h3>Låt oss ta första steget tillsammans!</h3>
+              <p>Vill du göra din verksamhet bättre och lösa de där irriterande utmaningarna? Vi finns här för dig! Fyll i vårt enkla formulär eller boka ett möte med oss. Tillsammans pratar vi igenom dina behov, dina drömmar och hur vi kan hjälpa dig att nå nya höjder.</p>
+            </div>
+          </li>
+          <li>
+            <img src="images/idea.png" alt="Feature 2">
+            <div>
+              <h3>Ett smartare företag börjar här – gratis förslag inom räckhåll!</h3>
+              <p>Inom kort får du ett kostnadsfritt förslag från oss, skräddarsytt för din verksamhet. Vi visar dig tydligt och enkelt vilka steg som kan lyfta dig och hur den senaste tekniken kan göra din vardag både smidigare och mer lönsam.</p>
+            </div>
+          </li>
+          <li>
+            <img src="images/implementation.png" alt="Feature 3">
+            <div>
+              <h3>Vi gör det till verklighet – snabbt och smidigt!</h3>
+              <p>När vi är överens sätter vi igång! Vårt team börjar direkt med att designa och utveckla den perfekta lösningen för din verksamhet. Vi arbetar effektivt för att implementera allt så snart som möjligt, så att du snabbt kan börja skörda frukterna av ditt nya, förbättrade företag.</p>
+            </div>
+          </li>
+        </ul>
+        <button class="prem-btn">Kom igång nu</button>
+      </div>
+    
+      <!-- Image Div -->
+      <div class="image-container">
+        <img src="images/innovation.png" alt="Big Feature Image">
+      </div>
+    </div>
+    
+  </section>
+  
 
   <script src="js/script.js"></script>
 </body>
