--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
         </nav>
         <button class="prem-btn">Kontakta oss</button>
       </div>
+
+      <!-- Menu Button for Small Screens -->
+      <button class="menu-btn" aria-label="Open menu">&#9776;</button>
+
+      <!-- Fullscreen Sliding Menu -->
+      <div class="fullscreen-menu">
+        <!-- Logo -->
+        <div class="logo">
+          <img src="images/logo.png" alt="Logo">
+          <h1 class="site-name">Prime Systems</h1>
+        </div>
+
+        <nav>
+          <ul>
+            <li><a href="index.html">Hem</a></li>
+            <li><a href="om.html">Om oss</a></li>
+            <li><a href="tjanster.html">Tjänster</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
+        </nav>
+        <button class="prem-btn">Kontakta oss</button>
+
+        <button class="close-btn" aria-label="Close menu">&times;</button>
+      </div>
     </div>
   </header>
 
@@ -75,7 +99,7 @@
     <!-- Content Div -->
     <div class="om-oss">
       <h1>Innovation och kvalitet i fokus</h1>
-      <p>Prime Systems drivs av en passion för innovation och engagemang för toppresultat. Vi sätter en ny standard för kvalitet, där varje kodrad och designdetalj är utformad för att överträffa förväntningar.</br> Med skräddarsydda lösningar skapar vi värde genom nära samarbete med kunder. Genom att kombinera teknisk expertis med kreativt tänkande säkerställer vi att vårt arbete alltid är i framkant.</p>
+      <p>Prime Systems drivs av en passion för innovation och engagemang för toppresultat. Vi sätter en ny standard för kvalitet, där varje kodrad och designdetalj är utformad för att överträffa förväntningar.</br> </br> Med skräddarsydda lösningar skapar vi värde genom nära samarbete med kunder. Genom att kombinera teknisk expertis med kreativt tänkande säkerställer vi att vårt arbete alltid är i framkant.</p>
     </div>
 
     <div class="content-image-section">
