--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- Fullscreen Sliding Menu -->
       <div class="fullscreen-menu">
         <!-- Logo -->
-        <div class="logo">
+        <div class="logo-mobile-menu">
           <img src="images/logo.png" alt="Logo">
           <h1 class="site-name">Prime Systems</h1>
         </div>
@@ -48,7 +48,7 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-        <button class="prem-btn">Kontakta oss</button>
+        <button class="prem-btn" style="margin: 0 auto; width: 50%;">Kontakta oss</button>
 
         <button class="close-btn" aria-label="Close menu">&times;</button>
       </div>
