--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
       <!-- Logo -->
       <div class="logo">
         <img src="images/logo.png" alt="Logo">
-        <h1 class="site-name">Prime Systems</h1>
       </div>
   
-      <!-- Navigation and Contact Button (Right Side) -->
       <div class="nav-container">
         <nav>
           <ul>
@@ -26,44 +24,48 @@
             <li><a href="kontakt.html">Kontakt</a></li>
           </ul>
         </nav>
-        <button class="prem-btn">Kontakta oss</button>
       </div>
 
       <!-- Menu Button for Small Screens -->
       <button class="menu-btn" aria-label="Open menu">&#9776;</button>
-
-      <!-- Fullscreen Sliding Menu -->
-      <div class="fullscreen-menu">
-        <!-- Logo -->
-        <div class="logo-mobile-menu">
-          <img src="images/logo.png" alt="Logo">
-          <h1 class="site-name">Prime Systems</h1>
-        </div>
-
-        <nav>
-          <ul>
-            <li><a href="index.html">Hem</a></li>
-            <li><a href="om.html">Om oss</a></li>
-            <li><a href="tjanster.html">Tjänster</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-          </ul>
-        </nav>
-        <button class="prem-btn" style="margin: 0 auto; width: 50%;">Kontakta oss</button>
-
-        <button class="close-btn" aria-label="Close menu">&times;</button>
-      </div>
     </div>
   </header>
+
+  <!-- Mobile Menu -->
+  <div class="mobile-menu">
+
+    <button class="close-btn" aria-label="Close menu">&times;</button>
+    <!-- Logo -->
+    <div class="logo-mobile-menu">
+      <img src="images/logo.png" alt="Logo">
+      <h1 class="site-name">Prime Systems</h1>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">Hem</a></li>
+        <li><a href="om.html">Om oss</a></li>
+        <li><a href="tjanster.html">Tjänster</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
+  </div>
 
   <!-- Hero Section -->
   <section class="hero-container">
     <div class="hero-content">
-      <h1>Uppgradera ditt företags teknologi idag!</h1>
-      <p>Kontakta oss för att maximera din verksamhet med skräddarsydda och högkvalitativa lösningar!</p>
+      <h1>Prime Systems - Optimera din verksamhet idag!</h1>
+      <p>Revolutionera din verksamhet med teknologiska lösningar. Låt Prime Systems guida dig mot framtiden och ge dina kunder en service som överträffar deras förväntningar.</p>
       <div>
         <button class="prem-btn">Kontakta oss</button>
         <button class="second-btn">Våra tjänster</button>
       </div>
+    </div>
+    <div class="hero-images">
+      <img src="images/hero1.jpeg" alt="Hero Image">
+      <img src="images/hero2.jpeg" alt="Hero Image">
+      <img src="images/hero3.jpeg" alt="Hero Image">
+      <img src="images/hero4.jpeg" alt="Hero Image">
     </div>
   </section>
 
