--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <!-- Logo -->
       <div class="logo">
-        <img src="images/logo.png" alt="Logo">
+        <a href="index.html"> <img src="images/logo.png" alt="Logo"> </a>
       </div>
   
       <div class="nav-container">
