--- a/index.html
+++ b/index.html
@@ -54,18 +54,12 @@
   <!-- Hero Section -->
   <section class="hero-container">
     <div class="hero-content">
-      <h1>Prime Systems - Optimera din verksamhet idag!</h1>
-      <p>Revolutionera din verksamhet med teknologiska lösningar. Låt Prime Systems guida dig mot framtiden och ge dina kunder en service som överträffar deras förväntningar.</p>
+      <h1>Prime Systems<br>Gör dig redo för framtiden &#128640;</h1>
+      <p>Optimera din verksamhet idag med teknologiska lösningar. Låt Prime Systems guida dig mot framtiden och ge dina kunder en service som överträffar deras förväntningar.</p>
       <div>
         <button class="prem-btn">Kontakta oss</button>
         <button class="second-btn">Våra tjänster</button>
       </div>
-    </div>
-    <div class="hero-images">
-      <img src="images/hero1.jpeg" alt="Hero Image">
-      <img src="images/hero2.jpeg" alt="Hero Image">
-      <img src="images/hero3.jpeg" alt="Hero Image">
-      <img src="images/hero4.jpeg" alt="Hero Image">
     </div>
   </section>
 
@@ -85,7 +79,7 @@
       <div class="card">
         <img src="images/web.jpg" alt="Card 2">
         <h2>Webbutveckling</h2>
-        <p>Optimera din verksamhet med en hemsida, e-butik eller e-tjänster anpassade efter dina affärsmål.</p>
+        <p>Optimera din verksamhet med en hemsida, webbshopp eller e-tjänster anpassade efter dina affärsmål.</p>
         <button class="read-btn">Läs mer >></button>
       </div>
       <div class="card">
